inspector UX update: 1. disabling log autoscroll when mouse is over it; 2. log items : white-space:pre-wrap; to avoid h-scroll;

--- a/demos/inspector/res/facade.css
+++ b/demos/inspector/res/facade.css
@@ -103,26 +103,39 @@ section.tabs > header > caption { width:max-content; display:block; height:*; pa
   :root {
     font: monospace, system;
     context-menu: selector(menu#for-log-list);
+    width:*;
   }
 
   list {
     display:block;
-    overflow:scroll-indicator;
+    overflow-y:scroll-indicator;
+    box-sizing:padding-box;
     size:*;
     border-spacing:2px;
+    padding:4px 0;
+  }
+
+  list:hover {
+    background-image: icon(0 -960 960 960;M160-80v-80h640v80H160Zm160-160v-200H120l180-221 57 57-68 84h111v200h160v-81l80 80v81H320Zm314-200-80-80h117L480-754l-72 88-57-57 129-157 360 440H634ZM819-28 27-820l57-57L876-85l-57 57ZM481-593Zm-96 131Z);
+    background-size: 16px;
+    background-position: bottom 2px right 8px;
+    fill: #ccc;
   }
 
   list > li {
     display:block;
-    flow:horizontal;
     width:*;
     padding-left:1.4em;
     background-size: 1em 1em;
     background-repeat: no-repeat;
     background-position: 0.2em 0.2em;
-    white-space:pre;
-    overflow-x: scroll-indicator;
-    border-spacing:0.5em 0;  
+    white-space:pre-wrap;
+  }
+
+  list > li > span {
+    //display:inline-block;
+    //width:max-content;
+    //max-width:100%;
   }
 
   list > li.dom { background-color: #FFF8DC; }
@@ -147,11 +160,6 @@ section.tabs > header > caption { width:max-content; display:block; height:*; pa
     stroke:@DECOLOR;
     stroke-width:1px;
     background-color:#f5f5f5;
-  }
-
-  list > li > span {
-    display:inline-block;
-    width:max-content;
   }
 
   textarea#toeval { 
@@ -182,7 +190,7 @@ section.tabs > header > caption { width:max-content; display:block; height:*; pa
     display:block;
     size:*;
     border:none;
-    ovreflow: scroll-indicator;
+    overflow: scroll-indicator;
   }
   option { width:max-content; text-overflow:none; overflow-x:visible;}
   option > caption { line-height:1.4em; height:1.4em; }
